@@ -43,6 +43,7 @@ class UpdateMediaWiki extends Maintenance {
 		$this->addOption( 'quick', 'Skip 5 second countdown before starting' );
 		$this->addOption( 'doshared', 'Also update shared tables' );
 		$this->addOption( 'nopurge', 'Do not purge the objectcache table after updates' );
+		$this->addOption( 'iknowwhatimdoing', 'Override when $wgMiserMode disables this script' );
 	}
 
 	function getDbType() {
@@ -75,7 +76,13 @@ class UpdateMediaWiki extends Maintenance {
 	}
 
 	function execute() {
-		global $wgVersion, $wgTitle, $wgLang;
+		global $wgVersion, $wgTitle, $wgLang, $wgMiserMode;
+
+		if( $wgMiserMode && !$this->hasOption( 'iknowwhatimdoing' ) ) {
+			$this->error( "Do not run update.php on this wiki. If you're seeing this you should\n"
+				. "probably ask for some help in performing your schema updates.\n\n"
+				. "If you know what you are doing, you can continue with --iknowwhatimdoing", true );
+		}
 
 		$wgLang = Language::factory( 'en' );
 		$wgTitle = Title::newFromText( "MediaWiki database updater" );
